@@ -2,6 +2,9 @@ API.txt: $Id$
 
 This file contains a log of changes to the API.
 
+API version 1.3.2:
+  Introduce 'export callback' to individual fields in export.inc
+
 API version 1.3.1:
   #649144 by neclimdul: Expand ctools_include() to work for other modules.
 
