@@ -5,45 +5,7 @@
  * @file
  * Contains code to make it easier to have exportable objects.
  *
- * These are objects that can live in code OR the database, and versions in
- * the database will override versions that are in code.
- *
- * This doesn't include a write routine since drupal_write_record is
- * more or less sufficient.
- *
- * Exportable objects are created by adding definition to the schema
- * in an 'export' section. The following fields are supported in this
- * chunk of code:
- * - key: This is the primary key of the exportable object and should be
- *   a string as names are more portable across systems. It is possible
- *   to use numbers here, but be aware that export collisions are very
- *   likely. Defaults to 'name'.
- * - object: The class the object should be created ass. Defaults as stdClass.
- * - can disable: Control whether or not the exportable objects can be
- *   disabled. All this does is cause the 'disabled' field on the object
- *   to always be set appropriately, and a variable is kept to record
- *   the state. Changes made to this state must be handled by the owner
- *   of the object. Defaults to TRUE.
- * - status: Exportable objects can be enabled or disabled, and this status
- *   is stored in a variable. This defines what variable that is. Defaults
- *   to: 'default_' . $table,
- * - default hook: What hook to invoke to find exportable objects that are
- *   currently defined. These will all be gathered into a giant array.
- *   Defaults to 'default_' . $table,
- * - identifier: When exporting the object, the identifier is the variable that
- *   the exported object will be placed in. Defaults to $table.
- * - bulk export': Declares whether or not the exportable will be available
- *   for bulk exporting. (Bulk export UI is currently left to be handled
- *   by contrib, though the core hooks are present so this can be done.).
- * - export callback: The callback to use for bulk exporting. Defaults to
- *   $module . '_export_' . $table.
- * - list callback: Bulk export callback to provide a list of exportable
- *   objects to be chosen for bulk exporting. Defaults to
- *   $module . '_' . $table . '_list'.
- * - to hook code callback: Function used to generate an export for the bulk
- *   export process. This is only necessary if the export is more complicated
- *   than simply listing the fields. Defaults to $module . '_' . $table .
- *   '_to_hook_code'.
+ * Documentation for exportable objects is contained in help/export.html
  */
 
 /**
@@ -220,11 +182,11 @@ function ctools_export_load_object($table, $type = 'all', $args = array()) {
 }
 
 /**
- * Reset all static caches in ctools_export_load_object() or static caches for 
+ * Reset all static caches in ctools_export_load_object() or static caches for
  * a given table in ctools_export_load_object().
- * 
+ *
  * @param $table
- *   String that is the name of a table. If not defined, all static caches in 
+ *   String that is the name of a table. If not defined, all static caches in
  *   ctools_export_load_object() will be reset.
  */
 function ctools_export_load_object_reset($table = NULL) {
@@ -441,12 +403,17 @@ function ctools_export_object($table, $object, $indent = '', $identifier = NULL,
       }
     }
 
-    $value = $object->$field;
-    if ($info['type'] == 'int') {
-      $value = (isset($info['size']) && $info['size'] == 'tiny') ? (bool) $value : (int) $value;
+    if (!empty($info['export callback']) && function_exists($info['export callback'])) {
+      $output .= $indent . '$' . $identifier . '->' . $field . ' = ' . $info['export callback']($object, $field, $value, $indent) . ";\n";
     }
+    else {
+      $value = $object->$field;
+      if ($info['type'] == 'int') {
+        $value = (isset($info['size']) && $info['size'] == 'tiny') ? (bool) $value : (int) $value;
+      }
 
-    $output .= $indent . '$' . $identifier . '->' . $field . ' = ' . ctools_var_export($value, $indent) . ";\n";
+      $output .= $indent . '$' . $identifier . '->' . $field . ' = ' . ctools_var_export($value, $indent) . ";\n";
+    }
   }
 
   // And bottom additions here
