@@ -15,6 +15,7 @@ Change plugins to no longer need magic function. Can now use $plugin = array(...
 #649144 by neclimdul: Expand ctools_include() to work for other modules. Move API version to 1.3.1
 #646944 by DamienMcKenna: Fix wrong variable name in page_manager_enable_page().
 Allow "admin path" to be empty for tasks to support Panels Everywhere.
+Introduce 'export callback' to individual fields in export.inc. Add some documentation to export.html -- much of it borrowed from stella!
 
 ctools 6.x-1.2
 ==============
